tests/graph_styles/snapshots/integration__graph_styles__bars.snap
---
source: tests/graph_styles/mod.rs
expression: stdout
---
██████▌
█████▌
████▋
███▋
██▊
█▉
█▏
▋
▎
▏
▏
▎
▊
█▎
██
██▉
███▊
████▊
█████▊
██████▋
███████▌
████████▍
█████████
█████████▌
█████████▉
██████████
█████████▉
█████████▋
█████████▏
████████▌
███████▊
██████▉
██████
█████
████
███▏
██▎
█▌
▉
▍
▏
▏
▎
▌
█
█▋
██▌
███▍
████▍
█████▎
██████▎

