tests/graph_styles/snapshots/integration__graph_styles__columns.snap
---
source: tests/graph_styles/mod.rs
expression: stdout
---
                       ▄▇█▇▅▁                      
                     ▃███████▄                     
                    ▄█████████▆                    
▄                  ▅███████████▇                  ▂
█▄                ▆██████████████                ▂█
██▅              ▆████████████████              ▃██
███▅            ▆██████████████████▁           ▃███
████▆          ▇████████████████████▂         ▄████
█████▇▁      ▂███████████████████████▄       ▅█████
███████▅▂▁▁▂▆█████████████████████████▇▃▁▁▂▄███████

